<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activiy_detail_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_collapseMode="pin"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:paddingTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/detail_view_magnitude_layout_vertical_padding"
            android:paddingBottom="@dimen/detail_view_magnitude_layout_bottom_padding"
            android:paddingLeft="@dimen/detail_view_layout_horizontal_padding"
            android:paddingRight="@dimen/detail_view_layout_horizontal_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eq_detail_magnitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_view_magnitude_text_size"
                android:layout_gravity="bottom"
                android:textColor="@color/colorPrimaryDark"
                tools:text="6.6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textSize="@dimen/detail_view_richter_text_size"
                android:text="@string/richter"
                android:layout_gravity="bottom"
                android:id="@+id/textView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_view_layout_vertical_margin"
            android:paddingLeft="@dimen/detail_view_layout_horizontal_padding"
            android:paddingRight="@dimen/detail_view_layout_horizontal_padding"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/myEq"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/detail_activity_icon_right_margin"
                android:layout_marginEnd="@dimen/detail_activity_icon_right_margin"
                app:srcCompat="@drawable/ic_placeblack48dp"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Longitude_detail"/>

                    <TextView
                        android:id="@+id/eq_detail_longitude"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/Longitude_detail"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detail_activity_latitude_margin_top"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Latitude_detail"/>

                    <TextView
                        android:id="@+id/eq_detail_latitude"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/Latitude_detail"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_activity_view_height"
                    android:layout_marginTop="@dimen/detail_activity_view_margin_top"
                    android:background="@color/view_silver"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_view_layout_vertical_margin"
            android:paddingLeft="@dimen/detail_view_layout_horizontal_padding"
            android:paddingRight="@dimen/detail_view_layout_horizontal_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/detail_activity_icon_right_margin"
                android:layout_marginEnd="@dimen/detail_activity_icon_right_margin"
                app:srcCompat="@drawable/ic_infoblack48dp"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eq_detail_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="97 Km S of Wonosari, Indonesia"
                    android:paddingTop="@dimen/detail_activity_vertical_padding"
                    android:paddingBottom="@dimen/detail_activity_vertical_padding"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_activity_view_height"
                    android:layout_marginTop="@dimen/detail_activity_view_margin_top"
                    android:background="@color/view_silver"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_view_layout_vertical_margin"
            android:paddingLeft="@dimen/detail_view_layout_horizontal_padding"
            android:paddingRight="@dimen/detail_view_layout_horizontal_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/detail_activity_icon_right_margin"
                android:layout_marginEnd="@dimen/detail_activity_icon_right_margin"
                app:srcCompat="@drawable/ic_watchlaterblack48dp"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eq_detail_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="17 de Noviembre - 16:29-37"
                    android:paddingTop="@dimen/detail_activity_vertical_padding"
                    android:paddingBottom="@dimen/detail_activity_vertical_padding"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_activity_view_height"
                    android:layout_marginTop="@dimen/detail_activity_view_margin_top"
                    android:background="@color/view_silver"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <RelativeLayout
                android:id="@+id/mapimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MapsActivity" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentBottom="false"
                    android:background="#00FFFFFF"
                    android:paddingLeft="20dp"
                    android:paddingTop="24dp"
                    android:contentDescription="Mi ubicación"
                    app:srcCompat="@drawable/ic_miubicacion" />

            </RelativeLayout>

        </LinearLayout>
</LinearLayout>
</LinearLayout>
